--- a/src/pages/files/Files.css
+++ b/src/pages/files/Files.css
@@ -46,7 +46,7 @@
     color: red;
   }
   
-  button {
+  .button {
     padding: 8px 16px;
     margin: 5px;
     border: none;
@@ -57,7 +57,7 @@
     font-size: 14px;
   }
   
-  button:hover {
+  .button:hover {
     background-color: #45a049;
   }
   
@@ -87,7 +87,7 @@
     margin: 5px 0;
   }
   
-  .file-preview button {
+  .file-preview .button {
     display: block;
     width: 100%;
     margin-top: 10px;
