--- a/src/pages/appDasshbord/appDashboard.css
+++ b/src/pages/appDasshbord/appDashboard.css
@@ -26,7 +26,7 @@
 .all-groups-continar{
     padding: 10px 20px;
 }
-.group{
+.group-dash{
     background-color: white;
     border: 2px solid #eee;
     display: flex;
@@ -38,11 +38,11 @@
     margin-bottom: 10px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
 }
-.group h3{
+.group-dash h3{
     color: black;
     font-weight: bold;
 }
-.group .options{
+.group-dash .options{
     width: 25%;
     display: flex;
     justify-content: space-around;
@@ -149,7 +149,7 @@
     padding: 5px;
     height: 80%;
 }
-.groups-in .group {
+.groups-in .group-dash {
     display: flex;
     justify-content: space-between;
     align-items: center;
