--- a/src/pages/appDasshbord/appDashboard.css
+++ b/src/pages/appDasshbord/appDashboard.css
@@ -1,27 +1,83 @@
+.app-dashboard-continar{
+    height: calc(100vh - 110px);
+    display: flex;
+}
 .app-dashboard-nav{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 15px;
     background-color: #34495e;
     color: #fff;
     padding: 0 20px;
-    margin-top: 1px;
-    height: 60px;
+    /* margin-top: 1px; */
+    width: 150px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: relative;
     z-index: 10;
 }
-.nav-link {
+.nav-link.slide {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
     margin-right: 15px;
     transition: color 0.3s ease;
+    border-radius: 5px solid #333;
+    border-radius: 8px;
+    padding: 5px 15px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
 }
 .nav-link:hover {
     color: #f39c12;
 }
+.outlet{
+    flex: 1;
+    overflow-y: auto;
+    scrollbar-width: thin; /* Thinner scrollbar */
+    scrollbar-color: #888 transparent; /* Color for thumb and track */
+}
+/* Styling the scrool bar  */
+div::-webkit-scrollbar {
+    width: 10px;
+}
 
+div::-webkit-scrollbar-track {
+    background: #f4f4f4;
+    border-radius: 10px;
+}
+
+div::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+    border: 3px solid transparent; /* Create space between scrollbar and edge */
+    background-clip: content-box; /* Ensure the border is transparent */
+}
+/**********/
+.outlet .statistics{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px
+}
+.statistics .stat{
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    border: 2px solid #eee;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+}
+.stat h1{
+    font-size: 25px;
+    font-weight: bold;
+}
 /* All Groups  */
 .all-groups-continar{
     padding: 10px 20px;
@@ -103,7 +159,7 @@
     font-size: 25px;
 }
 .group-users .members{
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 5px;
     height: 80%;
 }
@@ -145,7 +201,7 @@
     transition:  0.2s;
 }
 .group-users .groups-in{
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 5px;
     height: 80%;
 }
