--- a/src/pages/appDasshbord/appDashboard.css
+++ b/src/pages/appDasshbord/appDashboard.css
@@ -125,12 +125,12 @@ div::-webkit-scrollbar-thumb {
     transition:  0.2s ;
 }
 
-.icon-folder:hover,
+/* .icon-folder:hover,
 .icon-users:hover,
 .icon-user-friends,
 .icon-trash:hover {
     font-size: 24px;
-}
+} */
 
 .group-users-outlay{
     position: fixed;
@@ -172,7 +172,12 @@ div::-webkit-scrollbar-thumb {
     margin-bottom: 10px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
 }
-
+table th{
+    border:  1px solid rgb(44 45 178 / 50%);;
+}
+table th.act {
+    text-align: center;
+}
 /* All Users */
 .all-users-continar{
     padding: 10px 20px;
