--- a/src/pages/appDasshbord/appDashboard.css
+++ b/src/pages/appDasshbord/appDashboard.css
@@ -172,8 +172,8 @@ div::-webkit-scrollbar-thumb {
     margin-bottom: 10px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
 }
-table th{
-    border:  1px solid rgb(44 45 178 / 50%);;
+.app-dashboard-continar table th.act{
+    border:  1px solid rgb(44 45 178 / 50%);
 }
 table th.act {
     text-align: center;
