--- a/src/pages/appDasshbord/appDashboard.css
+++ b/src/pages/appDasshbord/appDashboard.css
@@ -72,6 +72,9 @@
 .appDashboard-menu-toggle{
     display: none;
 }
+.mobile-appDashboard-menue{
+    display: none;
+}
 @media (max-width: 767px) {
     .appDashboard-menu-toggle{
         font-size: 22px;
@@ -80,17 +83,17 @@
         display: inline;
         margin: 2px;
     }
-}
-.mobile-appDashboard-menue{
-    width: 100%;
-    background-color: #34495e;
-    min-height: 150px;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    padding-bottom: 8px;
+    .mobile-appDashboard-menue{
+        width: 100%;
+        background-color: #34495e;
+        min-height: 150px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        padding-bottom: 8px;
+    }
 }
 .outlet{
     flex: 1;
@@ -144,8 +147,9 @@ div::-webkit-scrollbar-thumb {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
 }
 .stat h1{
-    font-size: 25px;
+    font-size: 17px;
     font-weight: bold;
+    color: #007BFF;
 }
 /* All Groups  */
 .all-groups-continar{
@@ -315,4 +319,18 @@ table th.act {
     border-radius: 8px;
     cursor: pointer;
     z-index: 10;
+}
+/* Tooltips */
+.app-dashboard-nav .tooltip{
+    font-size: 13px;
+}
+.all-groups-continar .users-tooltip{
+    background-color: #007BFF;
+    color: white;
+    font-size: 12px;
+}
+.all-groups-continar .files-tooltip{
+    background-color:#f39c12 ;
+    color: black;
+    font-size: 12px;
 }
